compiler-core/src/nix/tests/snapshots/glistix_core__nix__tests__panic__as_expression.snap
---
source: compiler-core/src/nix/tests/panic.rs
expression: "\nfn go(f) {\n  let boop = panic\n  f(panic)\n}\n"
---
let
  inherit (builtins.import ./../gleam.nix) makeError;
  
  go =
    f:
    let
      boop =
        builtins.throw
          (makeError "panic" "my/mod" 3 "go" "panic expression evaluated" { });
    in
    f
      (builtins.throw
        (makeError "panic" "my/mod" 4 "go" "panic expression evaluated" { }));
in { }
