compiler-core/src/nix/tests/snapshots/glistix_core__nix__tests__panic__case.snap
---
source: compiler-core/src/nix/tests/panic.rs
expression: "\nfn go(x) {\n  case x {\n    _ -> panic\n  }\n}\n"
snapshot_kind: text
---
----- SOURCE CODE

fn go(x) {
  case x {
    _ -> panic
  }
}


----- COMPILED NIX
let
  inherit (builtins.import ./../gleam.nix) makeError;
  
  go =
    x:
    builtins.throw
      (makeError "panic" "my/mod" 4 "go" "`panic` expression evaluated." { });
in
{ }
