compiler-core/src/nix/tests/snapshots/glistix_core__nix__tests__panic__panic_as.snap
---
source: compiler-core/src/nix/tests/panic.rs
expression: "\nfn go() {\n  let x = \"wibble\"\n  panic as x\n}\n"
snapshot_kind: text
---
----- SOURCE CODE

fn go() {
  let x = "wibble"
  panic as x
}


----- COMPILED NIX
let
  inherit (builtins.import ./../gleam.nix) makeError;
  
  go =
    { }:
    let
      x = "wibble";
    in
    builtins.throw (makeError "panic" "my/mod" 4 "go" x { });
in
{ }
