compiler-core/src/nix/tests/snapshots/glistix_core__nix__tests__panic__panic_with_call.snap
---
source: compiler-core/src/nix/tests/panic.rs
expression: "\nfn go(x) {\n  panic as x(5, \"abc\")\n}\n"
---
let
  inherit (builtins.import ./../gleam.nix) makeError;
  
  go = x: builtins.throw (makeError "panic" "my/mod" 3 "go" (x 5 "abc") { });
in { }
