compiler-core/src/nix/tests/snapshots/glistix_core__nix__tests__panic__pipe.snap
---
source: compiler-core/src/nix/tests/panic.rs
expression: "\nfn go(f) {\n  f |> panic\n}\n"
snapshot_kind: text
---
----- SOURCE CODE

fn go(f) {
  f |> panic
}


----- COMPILED NIX
let
  inherit (builtins.import ./../gleam.nix) makeError;
  
  go =
    f:
    let
      _pipe = f;
    in
    (builtins.throw
        (makeError "panic" "my/mod" 3 "go" "`panic` expression evaluated." { }))
      _pipe;
in
{ }
