compiler-core/src/nix/tests/snapshots/glistix_core__nix__tests__panic__sequence.snap
---
source: compiler-core/src/nix/tests/panic.rs
expression: "\nfn go(at_the_disco) {\n  panic\n  at_the_disco\n}\n"
snapshot_kind: text
---
----- SOURCE CODE

fn go(at_the_disco) {
  panic
  at_the_disco
}


----- COMPILED NIX
let
  inherit (builtins.import ./../gleam.nix) makeError;
  
  go =
    at_the_disco:
    let
      _' =
        builtins.throw
          (makeError "panic" "my/mod" 3 "go" "`panic` expression evaluated." { });
    in
    builtins.seq _' at_the_disco;
in
{ }
